big push tieding up, etc

--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,136 @@
-body {
+﻿﻿body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  font-family: 'arial', 'sans-serif';
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+ul{
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+
+/*
+* compositions
+*/
+
+.composition{
+  display: flex;
+  flex-direction: row;
+  margin: 1rem 0;
+}
+
+.compItem{
+border-radius: 7px;
+padding: 1.5rem;
+margin: 0 0.15rem;
+}
+
+
+/*
+* nav
+*/
+
+.mainnav{
+  display: flex;
+}
+
+.nav__item{
+  display: block;
+}
+
+.nav__link{
+  display: block;
+  margin: 0.15rem;
+  padding: 0.25rem;
+  background-color: #c4c4c4;
+}
+
+
+/*
+* form
+*/
+
+form{
+  margin: 1.5rem;
+  padding: 1rem;
+  box-sizing: border-box;
+  border: solid black 1px;
+}
+
+label{
+  display: block;
+}
+
+label{
+  margin-bottom: 0.35rem;
+}
+
+.formModule{
+  margin-bottom: 1rem;
+}
+
+.error{
+  color: red;
+  font-weight: bold;
+}
+
+
+/*
+* plant list
+*/
+
+.plantList{
+  margin: 1.5rem;
+}
+
+.plantList__item{
+  display: flex;
+}
+
+.plantList__link{
+  display: block;
+  margin: 1rem 0.25rem;
+}
+
+.planteList_co{
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+}
+
+
+/*plante details*/
+
+.plantDetails{
+  padding: 1rem;
+  box-sizing: border-box;
+  background-color: #eee;
+}
+
+/*plante legénde*/
+.legend{
+  display: flex;
+}
+
+.legend > li{
+  display: block;
+  padding: 1.5rem;
+  margin: 0 0.15rem;
+  border-radius: 7px;
+}
+
+.darkGreen{
+  background-color: rgb(50, 85, 50);
+  color: #f7f7f7;
+}
+
+.mediumGreen{
+  background-color: rgb(100, 170, 100);
+  color: #000;
+}
+
+.lightGreen{
+  background-color: rgb(150, 255, 150);
+  color: #000;
 }
